<resources>
    <string name="app_name">Vis</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_teacher_main">TeacherMainActivity</string>
    <string name="language_title">Jazyk aplikácie</string>
    <string name="logout_button">Odhlásiť sa</string>
    <string name="changep_button">Zmeniť heslo</string>
    <string name="changep_text">Zmena hesla</string>
    <string name="sk_button">Slovenčina</string>
    <string name="en_button">Angličtina</string>
    <string name="old_text">VIS Staré heslo</string>
    <string name="new_text">VIS Nové heslo</string>
    <string name="home_header">Domov</string>
    <string name="student_header">Študent</string>
    <string name="teacher_header">Učiteľ</string>
    <string name="classroom_header">Triedy</string>
    <string name="message_header">Správy</string>
    <string name="call_header">Hovor</string>
    <string name="settings_header">Nastavenia</string>
    <string name="name_login">VIS Meno</string>
    <string name="password_login">VIS Heslo</string>
    <string name="button_login">Prihlásiť sa</string>
    <string name="button_registration">Nemáte ešte študentský účet ?</string>
    <string name="name_user">Meno použivateľa</string>
    <string name="lastname_user">Priezvisko použivateľa</string>
    <string name="email_reg">Email adresa</string>
    <string name="id_reg">ID Školy</string>
    <string name="phone_reg">Telefónne číslo</string>
    <string name="reg_button">Registrovať sa</string>
    <string name="reg_field">Registračný formulár</string>
    <string name="login_dialog1">Nesprávne prihlásenie !</string>
    <string name="login_dialog2">Musíte vyplniť všetky polia !</string>
    <string name="login_dialog3">Skúste to znova.</string>
    <string name="login_dialog4">Zadali ste nesprávne meno alebo heslo !</string>
    <string name="login_dialog5">Odhlásenie sa !</string>
    <string name="login_dialog6">Chcete sa naozaj odhlásiť ?</string>
    <string name="login_dialog7">Áno</string>
    <string name="login_dialog8">Nie</string>
    <string name="login_dialog9">Úspešná registrácia !</string>
    <string name="login_dialog10">Úspešne sa vám podarilo vytvoriť účet !</string>
    <string name="login_dialog11">Kliknite tu !</string>
    <string name="login_dialog12">Nesprávna registrácia !</string>
    <string name="login_dialog13">Skúste to znova.</string>
    <string name="login_dialog14">Musíte vyplniť meno !</string>
    <string name="login_dialog15">Musíte vyplniť priezvisko !</string>
    <string name="login_dialog16">Musíte vyplniť Vis Meno !</string>
    <string name="login_dialog17">Musíte vyplniť správny formát hesla !</string>
    <string name="login_dialog18">Heslo musí obsahovať čislo, veľké písmeno a aspoň 8 znakov !</string>
    <string name="login_dialog19">Nesprávny format emailu !</string>
    <string name="login_dialog20">Musíte vyplniť id školy !</string>
    <string name="login_dialog21">Telefóne číslo musí mať 10 číslic !</string>
    <string name="login_dialog22">Prerušenie registrácie !</string>
    <string name="login_dialog23">Vážne chcete prerušiť registráciu ?</string>
    <string name="login_dialog24">ID školy musí obsahovať presne 6 čísel !</string>
    <string name="login_dialog25">Používateľ už existuje !</string>
    <string name="login_dialog26">Používateľ neexistuje !</string>
    <string name="login_dialog27">Úspešne ste sa prihlásili !</string>
    <string name="login_dialog28">Najnovšie správy</string>
    <string name="login_dialog29">Najnovšie materialy</string>
    <string name="login_dialog30">Nemáte žiadné správy !</string>
    <string name="login_dialog31">Odosielateľ: </string>
    <string name="login_dialog32">Názov správy: </string>
    <string name="login_dialog33">Dátum odoslania: </string>
    <string name="login_dialog34">Nemáte žiadné súbory !</string>
    <string name="login_dialog35">Názov súboru: </string>
    <string name="login_dialog36">Informácie o študentovi </string>
    <string name="login_dialog37">Meno študenta: </string>
    <string name="login_dialog38">Vis meno: </string>
    <string name="login_dialog39">Email adresa: </string>
    <string name="login_dialog40">ID školy: </string>
    <string name="login_dialog41">Telefónne číslo: </string>
    <string name="login_dialog42">Informácie o účiteľovi: </string>
    <string name="login_dialog43">Meno učiteľa: </string>
    <string name="login_dialog44">Nesprávna zmena hesla !</string>
    <string name="login_dialog45">Staré a nové heslo sa nesmú zhodovať !</string>
    <string name="login_dialog46">Úspešne sa vám podarilo zmeniť heslo !</string>
    <string name="login_dialog47">Nepodarilo sa vám zmeniť heslo !</string>
    <string name="butt_prev">Predchadzajúce</string>
    <string name="butt_next">Následujúce</string>
    <string name="butt_new">Nová správa</string>
    <string name="login_dialog48">Nemáte žiadne správy !</string>
    <string name="login_dialog49">Viac správ už nemáte !</string>
    <string name="message_formular">Formulár správy</string>
    <string name="message_name">Názov správy</string>
    <string name="message_desc">Obsah správy</string>
    <string name="message_send">Odoslanie správy</string>
    <string name="back_butt">Späť</string>
    <string name="login_dialog50">Úspešne ste odoslali správu !</string>
    <string name="login_dialog51">Neúspešné odoslanie správy</string>
    <string name="login_dialog52">Musíte vyplniť všetky polia !</string>
    <string name="login_dialog53">Používateľ s takým menom neexistuje !</string>
    <string name="login_dialog54">Chcete sa vrátiť späť ?</string>
    <string name="adding_classroom">Vytvorenie triedy</string>
    <string name="name_classroom">Meno triedy</string>
    <string name="lecture_classroom">Názov predmetu</string>
    <string name="button_classroom">Vytvoriť</string>
    <string name="login_dialog55">Musíte vyplniť všetký polia !</string>
    <string name="login_dialog56">Úspešne ste vytvorili novú triedu.</string>
    <string name="login_dialog57">Nepodarilo sa vytvoriť triedu.</string>
    <string name="classroom_choice">Vyberte triedu</string>
    <string name="add_student2">Pridať študenta</string>
    <string name="login_dialog58">Úspešne ste pridali študenta do triedy !</string>
    <string name="login_dialog59">Študent neexistuje alebo už je pridaný v danej triede !</string>
    <string name="login_dialog60">Nemáte vytvorený žiadnu triedu !</string>
    <string name="login_dialog61">Pridať/Odobrať študenta</string>
    <string name="login_dialog62">Pridať/Odobrať material</string>
    <string name="name_student2">Meno študenta: </string>
    <string name="classroom_option">Možnosti tried: </string>
    <string name="type_option">Typ súboru: </string>
    <string name="name_material">Názov súboru </string>
    <string name="login_dialog63">Výber súboru</string>
    <string name="login_dialog64">Nevybratý súbor</string>
    <string name="login_dialog65">Vybratý súbor</string>
    <string name="login_dialog66">Úspešne ste pridali material !</string>
    <string name="login_dialog67">Neúspešne ste pridali material !</string>
    <string name="login_dialog68">Odobrať študenta</string>
    <string name="login_dialog69">Úspešné ste odobrali študenta</string>
    <string name="login_dialog70">Študent sa nenachádza v triede</string>
    <string name="remove_student2">Odobrať študenta</string>
    <string name="remove_material">Odobrať material</string>
    <string name="login_dialog71">Úspešne ste odobrali material !</string>
    <string name="login_dialog72">Material neexistuje !</string>
    <string name="login_dialog73">Pridať material</string>
    <string name="login_dialog74">Stiahnutie materialu</string>
    <string name="login_dialog75">Informácie o učiteľovi</string>
    <string name="login_dialog80">Nepodarilo sa stiahnuť súbor !</string>
    <string name="message_info1">Názov správy:</string>
    <string name="message_info2">Odosielateľ:</string>
    <string name="message_info3">Čas odoslania:</string>
    <string name="message_info4">Obsah správy:</string>
    <string name="maretial_info1">Názov triedy:</string>
    <string name="maretial_info2">Triedu vytvoril:</string>
    <string name="maretial_info3">Názov predmetu:</string>
    <string name="maretial_info4">Študenti v triede:</string>
    <string name="maretial_info5">Materialy v triede:</string>
    <string name="login_dialog76">Nie sú pridaný žiadny študenty !</string>
    <string name="login_dialog77">Nie sú pridané žiadné materialy !</string>
    <string name="loading">Načítanie...</string>
    <string name="download">Stiahnuť</string>
    <string name="login_dialog81">Trieda už existuje !</string>
    <string name="login_dialog78">Nie ste v žiadnej triede !</string>
    <string name="login_dialog79">Nemáte vytvorenú žiadnu triedu !</string>
    <string name="login_dialog95">Nemôžete poslať správu sám sebe !</string>
    <string name="login_dialog96">Nemáte čo stiahnuť !</string>
    <string name="login_dialog97">Nemáte pripojenie na internet !</string>
    <string name="SHARED_PREFERENCES_KEY" translatable="false">VIS_PREFERENCES_KEY</string>
    <string name="SHARED_PREFERENCES_LANGUAGE_KEY" translatable="false">VIS_LANGUAGE_PREFERENCE</string>
</resources>