<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_teacher"
            android:icon="@drawable/student"
            android:fillColor="@android:color/white"
            android:title="@string/teacher_header" />
        <item
            android:id="@+id/nav_message"
            android:icon="@drawable/messages"
            android:title="@string/message_header" />
        <item
            android:id="@+id/nav_teacher_classroom"
            android:icon="@drawable/materials"
            android:title="@string/classroom_header" />
        <item
            android:id="@+id/nav_call"
            android:icon="@drawable/calls"
            android:title="@string/call_header" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings"
            android:title="@string/settings_header" />
    </group>
</menu>