<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFF00"
    tools:context=".ui.settings.SettingsFragment">

    <TextView
        android:id="@+id/language"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/custom_button"
        android:fontFamily="sans-serif-black"
        android:text="@string/language_title"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_light"
        android:textLocale="center"
        android:textSize="24sp"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonSVK"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/custom_button"
        android:elevation="20dp"
        android:text="@string/sk_button"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toStartOf="@+id/buttonENG"
        app:layout_constraintHorizontal_bias="0.309"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/language" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonENG"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/custom_button"
        android:elevation="20dp"
        android:text="@string/en_button"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/language" />

    <TextView
        android:id="@+id/changePassword"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:background="@drawable/custom_button"
        android:elevation="20dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/changep_text"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_light"
        android:textLocale="center"
        android:textSize="24sp"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/language" />

    <EditText
        android:id="@+id/oldPassword"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_lock_icon"
        android:elevation="20dp"
        android:ems="10"
        android:hint="@string/old_text"
        android:inputType="textPassword"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/changePassword" />

    <EditText
        android:id="@+id/newPassword"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_lock_icon"
        android:elevation="20dp"
        android:ems="10"
        android:hint="@string/new_text"
        android:inputType="textPassword"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/oldPassword" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonChangePassword"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_button"
        android:elevation="20dp"
        android:text="@string/changep_button"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newPassword" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/logOut"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_button"
        android:elevation="20dp"
        android:text="@string/logout_button"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonChangePassword"
        app:layout_constraintVertical_bias="0.507" />

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonChangePassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newPassword"
        tools:visibility="gone" />
</androidx.constraintlayout.widget.ConstraintLayout>