<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFF00"
    tools:context=".MessageSender">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/send_message"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/custom_button"
        android:elevation="20dp"
        android:text="@string/message_send"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/des_message" />

    <EditText
        android:id="@+id/receiver"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_user_icon"
        android:ems="10"
        android:hint="@string/name_login"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <EditText
        android:id="@+id/des_message"
        android:layout_width="318dp"
        android:layout_height="265dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/message_desc"
        android:textColorHint="@android:color/darker_gray"
        android:inputType="textMultiLine"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:paddingTop="12dp"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.348"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameMessage" />

    <EditText
        android:id="@+id/nameMessage"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_email_icon"
        android:ems="10"
        android:hint="@string/message_name"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/receiver" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/custom_button"
        android:fontFamily="sans-serif-black"
        android:text="@string/message_formular"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_light"
        android:textLocale="center"
        android:textSize="24sp"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_back"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/custom_button"
        android:elevation="20dp"
        android:text="@string/back_butt"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/send_message" />

    <ProgressBar
        android:id="@+id/progressBar3"
        style="?android:attr/progressBarStyle"
        android:layout_width="73dp"
        android:layout_height="55dp"
        app:layout_constraintBottom_toTopOf="@+id/send_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/des_message" />
</androidx.constraintlayout.widget.ConstraintLayout>