<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFF00"
    android:clipChildren="false"
    android:clipToPadding="false"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/nameField"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_user_icon"
        android:elevation="20dp"
        android:ems="10"
        android:hint="@string/name_login"
        android:inputType="textPersonName"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <EditText
        android:id="@+id/passField"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_lock_icon"
        android:elevation="20dp"
        android:ems="10"
        android:hint="@string/password_login"
        android:textColorHint="@android:color/darker_gray"
        android:inputType="textPassword"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameField" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="@drawable/custom_button"
        android:elevation="20dp"
        android:text="@string/button_login"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passField"
        app:layout_constraintVertical_bias="0.847" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/register"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/custom_button"
        android:elevation="20dp"
        android:text="@string/button_registration"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="61dp"
        android:layout_height="50dp"
        android:layout_marginTop="4dp"
        app:layout_constraintBottom_toTopOf="@+id/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passField"
        tools:visibility="gone" />


</androidx.constraintlayout.widget.ConstraintLayout>