<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="#FFFF00"
    android:padding="30dp">


    <TextView
        android:id="@+id/textView7"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name_material"
        android:layout_marginTop="15dp"
        android:background="@drawable/custom_button"
        android:fontFamily="sans-serif-black"
        android:text="@string/classroom_option"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_light"
        android:textLocale="center"
        android:textSize="15sp"
        android:typeface="normal" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        app:srcCompat="@drawable/logo2" />

    <EditText
        android:id="@+id/name_material"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@+id/textView6"
        android:layout_marginTop="2dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_user_icon"
        android:ems="10"
        android:hint="@string/name_login"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/darker_gray" />


    <Spinner
        android:id="@+id/classrooms"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@+id/textView7"
        android:layout_marginTop="2dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:spinnerMode="dropdown" />

    <ProgressBar
        android:id="@+id/progressBar4"
        style="?android:attr/progressBarStyle"
        android:layout_width="241dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/chooseMaterial"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/uploadMaterial"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/progressBar4"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="122dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="98dp"
        android:background="@drawable/custom_button"
        android:text="@string/add_student2"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView6"
        android:layout_marginTop="19dp"
        android:background="@drawable/custom_button"
        android:fontFamily="sans-serif-black"
        android:text="@string/name_student2"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_light"
        android:textLocale="center"
        android:textSize="15sp"
        android:typeface="normal" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/chooseMaterial_button"
        android:layout_width="134dp"
        android:layout_height="46dp"
        android:layout_below="@+id/classrooms"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="136dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="2dp"
        android:layout_toEndOf="@+id/chooseMaterial"
        android:text="Button" />

    <TextView
        android:id="@+id/chooseMaterial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/classrooms"
        android:layout_alignParentStart="true"
        android:layout_marginStart="51dp"
        android:layout_marginTop="20dp"
        android:text="TextView" />


</RelativeLayout>